ZooKeeper Extension Changelog

Version 0.7.0
-------------
	Improvements:
	* Drop PHP-5 support (Issue #14)
	* Fix segmentation fault found in PHP 7.3

Version 0.6.3
-------------
	Bugs:
	* Correct exception message (From "Failed to connect to Zookeeper" to "Failed to initialize ZooKeeper ...", Issue #29)
	* Fix 'duplicate symbol _php_zk_config_ce'
    * Fix segmentation fault when destroying Zookeeper instance (GH PR #31)

Version 0.6.2
-------------
	Bugs:
	* Fix 'undefined symbol: zoo_wgetconfig' with libzookeeper < 3.5 (Issue #22)

Version 0.6.1
-------------
	Bugs:
	* Fix memory leaks
	Others:
	* Fix symbol conflicts

Version 0.6.0
-------------
	Improvements:
	* Add class 'ZookeeperConfig'
	* Add method 'getConfig'
	* Drop PHP-5 support

Version 0.5.1
-------------
	Others:
	* Fix warning: implicit declaration of function ‘xxx’ [-Wimplicit-function-declaration]

Version 0.5.0
-------------
	Improvements:
	* Add method 'close'
	php-zookeeper-0.5.x will be the last series which supports PHP 5.x.

Version 0.4.1
-------------
	Bugs:
	* Fix 'Corrupted fcall_info provided to zend_call_function()' (AZ Issue #89, #90)

Version 0.4.0
-------------
	Bugs:
	* Fix segmentation fault due to improperly implemented threading (PR #13)

	Improvements:
	* Add function 'zookeeper_dispatch'

Version 0.3.2
-------------
	Bugs:
	* Fix duplicate symbols (PR #10)


Version 0.3.1
-------------
	Bugs:
	* Fix memory leak in method getChildren (Thanks to hulk<hulk.website@gmail.com>, PR #5)
	* Fix memory leak in method create (Thanks to Lin Huang, PR #6)


Version 0.3.0
-------------
	Bugs:
	* Fix session warning with PHP 7.1 (Issue #4)

	Improvements:
	* Support PHP-7 (PR #1)
	* Support exceptions (PR #2)


Version 0.2.3
-------------
	Bugs:
	* Fix 'Node with null data cause php segfault at Zookeeper::get($path)' (AZ Issue #21)
	* Fix 'Stat is null when get a node which holds null data' (AZ Issue #29)